[package]
name = "redis-cli"
version = "0.1.0"
authors = ["zuiyu1998 <1542844298@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]


[dependencies]
nom = "5"
bytes = "0.6"
